--- a/src/content/docs/guides/fun_tools.mdx
+++ b/src/content/docs/guides/fun_tools.mdx
@@ -3,12 +3,19 @@ title: Fun Tools!
 description: Fun tools that I love
 ---
 
-# Everything by Voidtools
+## Everything by Voidtools
 To easily find files in your system, download Everything (the program named 'Everything', not everything by Voidtools) by Voidtools [here](https://www.voidtools.com/downloads/)
 
-# Homebrew
+## Homebrew
 [Homebrew](https://brew.sh/) lets you easily install packages into your Mac.
 
-Run `/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"` to install Homebrew.
+Run the following to install Homebrew:
+```bash
+/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+```
 
-Install Homebrew packages with `brew install packagename`.
+Install Homebrew packages with
+
+```bash
+brew install packagename
+```
