--- a/src/content/docs/guides/wsl.mdx
+++ b/src/content/docs/guides/wsl.mdx
@@ -3,21 +3,19 @@ title: WSL
 description: I love UNIX
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 WSL stands for Windows Subsystem for Linux. It installs a Linux distribution within your Windows machine so you can keep using Windows and experience the joys of a UNIX environment (with reduced performance)!
 
 WSL is awesome. Install it by running the following in Powershell:
+
 ```ps1
 wsl.exe --install
 ```
 
 <Aside type="note">
-    To install a specific distribution, use
-    
-    ```bash
-    wsl.exe --install distribution
-    ```
+  To install a specific distribution, use ```bash wsl.exe --install distribution
+  ```
 </Aside>
 
 View your distributions with
