--- a/src/content/docs/guides/wsl.mdx
+++ b/src/content/docs/guides/wsl.mdx
@@ -14,8 +14,11 @@ wsl.exe --install
 ```
 
 <Aside type="note">
-  To install a specific distribution, use ```bash wsl.exe --install distribution
-  ```
+    To install a specific distribution, use 
+    
+    ```bash 
+    wsl.exe --install distribution 
+    ```
 </Aside>
 
 View your distributions with
